attached_assets/Pasted--Build-successful-Deploying-Running-python-render-app-py-2025-05-10-20-31-57-7-1746909206251.txt
==> Build successful 🎉
==> Deploying...
==> Running 'python render_app.py'
2025-05-10 20:31:57,770 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:57,770 [INFO] service.database: Подключение к PostgreSQL в среде Render...
INFO:service.database:Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:57,793 [INFO] service.database: База данных инициализирована
2025-05-10 20:31:57,793 [INFO] service.database: База данных инициализирована
INFO:service.database:База данных инициализирована
2025-05-10 20:31:58,565 [INFO] service.shared_state: Загружен токен из переменной окружения длиной: 46 символов
2025-05-10 20:31:58,565 [INFO] service.shared_state: Загружен токен из переменной окружения длиной: 46 символов
INFO:service.shared_state:Загружен токен из переменной окружения длиной: 46 символов
INFO:__main__:Инициализация базы данных...
INFO:main:Инициализация базы данных через main.py...
2025-05-10 20:31:58,566 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,566 [INFO] service.database: Подключение к PostgreSQL в среде Render...
INFO:service.database:Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,582 [INFO] service.database: База данных инициализирована
2025-05-10 20:31:58,582 [INFO] service.database: База данных инициализирована
INFO:service.database:База данных инициализирована
INFO:__main__:База данных инициализирована
INFO:__main__:Токен Telegram бота найден, длина: 46 символов, формат корректный
INFO:__main__:Запуск бота в отдельном потоке...
INFO:__main__:Запуск диагностики бота перед запуском...
2025-05-10 20:31:58,583 [INFO] service.bot_diagnostics: Запуск полной диагностики бота...
INFO:__main__:Поток бота запущен
INFO:__main__:Запуск веб-сервера на порту 5000...
2025-05-10 20:31:58,583 [INFO] service.bot_diagnostics: Запуск полной диагностики бота...
INFO:service.bot_diagnostics:Запуск полной диагностики бота...
2025-05-10 20:31:58,584 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,584 [INFO] service.database: Подключение к PostgreSQL в среде Render...
Загружен токен из переменной окружения длиной: 46 символов
 * Serving Flask app 'app'
 * Debug mode: off
INFO:service.database:Подключение к PostgreSQL в среде Render...
INFO:werkzeug:WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.223.214.80:5000
INFO:werkzeug:Press CTRL+C to quit
2025-05-10 20:31:58,666 [INFO] service.bot_diagnostics: ✅ Подключение к базе данных: успешно
2025-05-10 20:31:58,666 [INFO] service.bot_diagnostics: ✅ Подключение к базе данных: успешно
INFO:service.bot_diagnostics:✅ Подключение к базе данных: успешно
2025-05-10 20:31:58,666 [INFO] service.bot_diagnostics: ✅ Токен бота валиден (длина: 46)
2025-05-10 20:31:58,666 [INFO] service.bot_diagnostics: ✅ Токен бота валиден (длина: 46)
INFO:service.bot_diagnostics:✅ Токен бота валиден (длина: 46)
2025-05-10 20:31:58,666 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,666 [INFO] service.database: Подключение к PostgreSQL в среде Render...
INFO:service.database:Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,711 [INFO] service.bot_diagnostics: ✅ Количество пользователей в системе: 0
2025-05-10 20:31:58,711 [INFO] service.bot_diagnostics: ✅ Количество пользователей в системе: 0
INFO:service.bot_diagnostics:✅ Количество пользователей в системе: 0
2025-05-10 20:31:58,712 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,712 [INFO] service.database: Подключение к PostgreSQL в среде Render...
INFO:service.database:Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,811 [INFO] service.bot_diagnostics: ✅ Количество шаблонов проблем: 0
2025-05-10 20:31:58,811 [INFO] service.bot_diagnostics: ✅ Количество шаблонов проблем: 0
INFO:service.bot_diagnostics:✅ Количество шаблонов проблем: 0
2025-05-10 20:31:58,811 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,811 [INFO] service.database: Подключение к PostgreSQL в среде Render...
INFO:service.database:Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,911 [INFO] service.bot_diagnostics: ✅ Количество мастеров в системе: 0
2025-05-10 20:31:58,911 [INFO] service.bot_diagnostics: ✅ Количество мастеров в системе: 0
INFO:service.bot_diagnostics:✅ Количество мастеров в системе: 0
2025-05-10 20:31:58,911 [INFO] service.database: Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:58,911 [INFO] service.database: Подключение к PostgreSQL в среде Render...
INFO:service.database:Подключение к PostgreSQL в среде Render...
2025-05-10 20:31:59,008 [INFO] service.bot_diagnostics: ✅ Количество заказов в системе: 0
2025-05-10 20:31:59,008 [INFO] service.bot_diagnostics: ✅ Количество заказов в системе: 0
INFO:service.bot_diagnostics:✅ Количество заказов в системе: 0
2025-05-10 20:31:59,008 [INFO] service.bot_diagnostics: ✅ Диагностика завершена успешно! Ошибок не обнаружено.
2025-05-10 20:31:59,008 [INFO] service.bot_diagnostics: ✅ Диагностика завершена успешно! Ошибок не обнаружено.
INFO:service.bot_diagnostics:✅ Диагностика завершена успешно! Ошибок не обнаружено.
INFO:__main__:✅ Диагностика успешна! Запуск бота...
2025-05-10 20:31:59,016 [ERROR] service.bot_diagnostics: ❌ Критическая ошибка при запуске бота: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (bot_fixed2.py, line 2388)
2025-05-10 20:31:59,016 [ERROR] service.bot_diagnostics: ❌ Критическая ошибка при запуске бота: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (bot_fixed2.py, line 2388)
ERROR:service.bot_diagnostics:❌ Критическая ошибка при запуске бота: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (bot_fixed2.py, line 2388)
2025-05-10 20:31:59,017 [ERROR] service.bot_diagnostics: Traceback (most recent call last):
  File "/opt/render/project/src/bot_diagnostics.py", line 120, in bot_polling
    from start_bot import start_bot
  File "/opt/render/project/src/start_bot.py", line 21, in <module>
    from bot_fixed2 import (
  File "/opt/render/project/src/bot_fixed2.py", line 2388
    "📅 Введите дату и время для выполнения заказа (например, '15["05"].2025 14:30'):"
                                                                                     ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
2025-05-10 20:31:59,017 [ERROR] service.bot_diagnostics: Traceback (most recent call last):
  File "/opt/render/project/src/bot_diagnostics.py", line 120, in bot_polling
    from start_bot import start_bot
  File "/opt/render/project/src/start_bot.py", line 21, in <module>
    from bot_fixed2 import (
  File "/opt/render/project/src/bot_fixed2.py", line 2388
    "📅 Введите дату и время для выполнения заказа (например, '15["05"].2025 14:30'):"
                                                                                     ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
ERROR:service.bot_diagnostics:Traceback (most recent call last):
  File "/opt/render/project/src/bot_diagnostics.py", line 120, in bot_polling
    from start_bot import start_bot
  File "/opt/render/project/src/start_bot.py", line 21, in <module>
    from bot_fixed2 import (
  File "/opt/render/project/src/bot_fixed2.py", line 2388
    "📅 Введите дату и время для выполнения заказа (например, '15["05"].2025 14:30'):"
                                                                                     ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
INFO:werkzeug:127.0.0.1 - - [10/May/2025 20:31:59] "HEAD / HTTP/1.1" 200 -
==> Your service is live 🎉